	Documentation brushed up;

after 0.6:
	Emulated subroutines for missing interfaces added (77 not ok);
	T: substitution 'fun(j=1)' to 'fun(j,1)' in testout (64 not ok);
	Better conversion of chapter3 (index entries created, literal blocks);
	T: Enable tests with print (75 not ok, 106 skip);
	T: Massage tests with loops (84 not ok, 78 skip);
	T: Massage floats on output to 16 digits (69 not ok, 78 skip);
	T: Massage complicated matrix output, +tiny changes (45 not ok, 76 sk);
	T: Yet more misc massage (29 not ok - most truely so, 81 skip);
	4 classes of problems: 
	   ker(matrix), pari_print inside fordiv, changevar, taylor

after 0.7:
	T: settype was ok, so remove the code for skipping it (80 skip)
	T: better filtering, print/multiline were busted (26 not ok, 73 skip);
	changevar() added;
	Access to vector elements via $v->[3] (0-based);
	T: convert a[6] to $a->[-1+6]:  (34 not ok, 37 skip);
	minor improvements to chap3_to_pod (for chapter 4 ;-);
	T: transposition tests converted: (34 not ok, 31 skip);
	sentinel introduced, does not fix anything...;
	T: had a workaround for forprime() instead of forvec() (33/31);
	T: various improvements... (17 not ok, but segfaults on exit);
	matrix() could have been called with the same variable for two
		iterators (4 not ok/30 skip, but segfaults on exit)
	T: move failing tests to will_fail.t;

after 0.8:
	Hi-resolution plotting works if one has Term::Gnuplot v. 0.4,
		one needs to call link_gnuplot() before doing this;
	foncpari.pl now suggests the code for a missing interface (in simplest
		cases);
	interfaces for most functions added (except buch*, string and addhelp);
	indirect variables (like PARIvar('x')) can be indexed like $x->[2];
	T: Interactive plotting test added (ignored if no Term::Gnuplot);
	Bug in libPARI/plotport.c corrected;
	Minor changes to chap3_to_pod;
after 0.91:
	Chip recognition code from PARI2.0alpha0 added;
	Builds on Solaris, gives illegal instruction trap in t/Testout.t:32;